--- a/scss/style.scss
+++ b/scss/style.scss
@@ -17,9 +17,9 @@ Text Domain: printer
 # General
 # WordPress Core
 # Header
+  ## Logo
   ## Information
-# Navigation
-  ## Nav Top
+  ## Nav
 # Page
 # Sidebar
 # Blog
@@ -51,11 +51,6 @@ Text Domain: printer
 # Header
 -----------------------------------------------------------------------------*/
 @import "header/header";
-
-/**
-# Navigation
------------------------------------------------------------------------------*/
-@import "navigation/navigation";
 
 /**
 # Page
