--- a/scss/variables-site/_color.scss
+++ b/scss/variables-site/_color.scss
@@ -1,11 +1,11 @@
 // Color
 $color-primary: #777777;
-$color-title: #333333;
-$color-hover: #ff5555;
+$color-title: #1d2127;
+$color-hover: #fe0000;
 
 // Background
-$background-primary: #333333;
-$background-hover: #ff5555;
+$background-primary: #fe0000;
+$background-hover: #e50000;
 
 // Border color
 $border-color: #eeeeee;
