--- a/scss/variables-site/_font.scss
+++ b/scss/variables-site/_font.scss
@@ -1,5 +1,5 @@
 // Font Families
-$font-family-text: 'Roboto', sans-serif;
+$font-family-text: 'Open Sans', sans-serif;
 
 // Font Weights
 $font-weight-light: 300;
