--- a/scss/header/_information.scss
+++ b/scss/header/_information.scss
@@ -1,21 +1,59 @@
-.information {
-  line-height: 32px;
-  border-bottom: 1px solid #eee;
+.header-right {
+  padding: 15px 0;
+}
+.header-right-top {
+  .header-contact {
+    padding: 0;
+    margin: 0;
+    list-style: none;
 
-  span {
-    display: inline-block;
-    padding-left: 7px;
-    padding-right: 12px;
+    li {
+      display: inline-block;
+      font-weight: 700;
+      font-size: 12px;
+      text-transform: uppercase;
+      padding-right: 10px;
 
-    i.fa {
-      margin-right: 5px;
+      a {
+        color: $color-title;
+
+        &:hover {
+          color: $color-hover;
+        }
+      }
     }
   }
-}
-.information__social-network {
-  .social-network-item {
-    margin: 0;
-    width: 30px;
-    text-align: center;
+  .header-search {
+    margin-left: 10px;
+
+    .search-form {
+      position: relative;
+      border: 1px solid #cccccc;
+      border-radius: 20px;
+      overflow: hidden;
+
+      .search-field {
+        padding: 3px 30px 3px 10px;
+        border: none;
+      }
+      .search-submit {
+        position: absolute;
+        right: 0;
+        top: 0;
+        height: 100%;
+        width: 30px;
+        color: #c3c3c3;
+        padding: 0;
+        background-color: transparent;
+        @include flexbox();
+        @include align-items(center);
+        @include justify-content(center);
+
+        .search-reader-text {
+          display: none;
+        }
+      }
+    }
+
   }
 }
