- create home page

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -30,6 +30,7 @@ Text Domain: printer
   ## Slider
   ## Posts Grid
   ## Posts Carousel
+  ## Partners Carousel
 # Contact Form 7
 # Footer
 # Responsive
