- update code slider full

--- a/scss/variables-site/_color.scss
+++ b/scss/variables-site/_color.scss
@@ -5,6 +5,7 @@ $color-hover: #fe0000;
 
 // Background
 $background-primary: #fe0000;
+$background-second: #ec2027;
 $background-hover: #e50000;
 
 // Border color
