--- a/scss/elementor/partners-carousel.scss
+++ b/scss/elementor/partners-carousel.scss
@@ -25,8 +25,12 @@
       }
     }
     .item {
+      position: relative;
+      border-radius: 15px;
+      overflow: hidden;
       @include transition(all 0.4s ease-in-out);
-      a {
+
+      .item-img {
         position: relative;
         display: block;
         height: 470px;
@@ -46,10 +50,53 @@
           object-fit: cover;
         }
       }
+      .item-content {
+        position: absolute;
+        padding: 30px;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        z-index: 1;
+      }
+      .item-title {
+        color: #ffffff;
+        font-weight: 600;
+        margin: 0;
+        font-size: 42px;
+      }
+      .item-link {
+        display: inline-block;
+        color: #ffffff;
+        text-transform: uppercase;
+        padding: 10px 30px 10px 30px;
+        border-radius: 5px;
+        background-color: $background-second;
+      }
     }
     .owl-item:not(.active) {
       .item {
         opacity: 0.5;
+      }
+    }
+  }
+}
+.custom-style-owl {
+  &.owl-carousel {
+    .owl-dots {
+      .owl-dot {
+        span {
+          width: 14px;
+          height: 14px;
+          background-color: transparent;
+          border: 2px solid rgba(28,28,28,1);
+        }
+        &.active,
+        &:hover {
+          span {
+            background-color: #1c1c1c;
+          }
+        }
       }
     }
   }
