--- a/scss/elementor/partners-carousel.scss
+++ b/scss/elementor/partners-carousel.scss
@@ -43,6 +43,7 @@
           height: 100%;
           top: 0;
           left: 0;
+          border-radius: 15px;
           background-color: rgba(0,0,0,0.5);
         }
         img {
