--- a/scss/style.scss
+++ b/scss/style.scss
@@ -31,6 +31,7 @@ Text Domain: printer
   ## Posts Grid
   ## Posts Carousel
   ## Partners Carousel
+  ## Popup Video
 # Contact Form 7
 # Footer
 # Responsive
