--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -76,6 +76,15 @@
       }
     }
   }
+  .site-header {
+    .header-right-top {
+      display: none;
+
+      .header-search {
+        display: none;
+      }
+    }
+  }
   .site-menu {
     > ul {
       height: 100%;
@@ -84,6 +93,21 @@
         display: inline-flex;
         height: 100%;
         @include align-items(center);
+
+        &.menu-item-has-children {
+          > a {
+            &:after {
+              position: relative;
+              right: -8px;
+              font-family: "Font Awesome 5 Free";
+              font-weight: 900;
+              content: "\f078";
+              font-size: 10px;
+              color: $color-hover;
+              @include transition(all 0.4s ease-in-out);
+            }
+          }
+        }
       }
     }
     ul {
@@ -94,14 +118,6 @@
       }
     }
   }
-  .modal {
-    &.mode-quick-view-product {
-      .modal-dialog {
-        max-width: 850px;
-      }
-    }
-  }
-
 }
 
 @media ( max-width: 991px ) {
@@ -127,6 +143,23 @@
     margin: 0;
     padding: 0;
     display: block;
+  }
+  .site-header {
+    .header-right {
+      @include flexbox();
+      @include align-items(center);
+      @include justify-content(flex-end);
+    }
+    .header-right-top {
+      .header-search {
+        .search-form {
+          display: none;
+        }
+      }
+    }
+    .header-right-bottom {
+      display: none;
+    }
   }
   .site-menu {
     position: absolute;
