--- a/scss/header/_nav.scss
+++ b/scss/header/_nav.scss
@@ -1,3 +1,9 @@
+.header-right-top {
+  .navbar-toggler {
+    color: #999999;
+    padding: 0 0 0 10px;
+  }
+}
 .header-right-bottom {
   margin-top: 15px;
 }
@@ -26,17 +32,6 @@
 
       &.menu-item-has-children {
         border-radius: 4px 4px 0 0;
-
-        &:after {
-          position: relative;
-          right: 10px;
-          font-family: "Font Awesome 5 Free";
-          font-weight: 900;
-          content: "\f078";
-          font-size: 10px;
-          color: $color-hover;
-          @include transition(all 0.4s ease-in-out);
-        }
       }
       > a {
         color: $color-hover;
@@ -46,8 +41,8 @@
       &:hover {
         background-color: $background-hover;
 
-        &:after,
-        > a {
+        > a,
+        > a:after {
           color: #ffffff;
         }
       }
