--- a/style.css
+++ b/style.css
@@ -745,6 +745,11 @@ form.post-password-form p input[type='submit'] {
 }
 
 /* Nav */
+.header-right-top .navbar-toggler {
+  color: #999999;
+  padding: 0 0 0 10px;
+}
+
 .header-right-bottom {
   margin-top: 15px;
 }
@@ -778,20 +783,6 @@ form.post-password-form p input[type='submit'] {
   border-radius: 4px 4px 0 0;
 }
 
-.site-menu > ul > li.menu-item-has-children:after {
-  position: relative;
-  right: 10px;
-  font-family: "Font Awesome 5 Free";
-  font-weight: 900;
-  content: "\f078";
-  font-size: 10px;
-  color: #fe0000;
-  -webkit-transition: all 0.4s ease-in-out;
-  -moz-transition: all 0.4s ease-in-out;
-  -o-transition: all 0.4s ease-in-out;
-  transition: all 0.4s ease-in-out;
-}
-
 .site-menu > ul > li > a {
   color: #fe0000;
   font-weight: 700;
@@ -802,8 +793,8 @@ form.post-password-form p input[type='submit'] {
   background-color: #e50000;
 }
 
-.site-menu > ul > li:hover:after,
-.site-menu > ul > li:hover > a {
+.site-menu > ul > li:hover > a,
+.site-menu > ul > li:hover > a:after {
   color: #ffffff;
 }
 
@@ -2203,6 +2194,12 @@ form.wpcf7-form .wpcf7-submit {
   .admin-bar .main-navigation.active-sticky-nav {
     top: 32px;
   }
+  .site-header .header-right-top {
+    display: none;
+  }
+  .site-header .header-right-top .header-search {
+    display: none;
+  }
   .site-menu > ul {
     height: 100%;
   }
@@ -2212,11 +2209,21 @@ form.wpcf7-form .wpcf7-submit {
     -webkit-align-items: center;
     align-items: center;
   }
+  .site-menu > ul > li.menu-item-has-children > a:after {
+    position: relative;
+    right: -8px;
+    font-family: "Font Awesome 5 Free";
+    font-weight: 900;
+    content: "\f078";
+    font-size: 10px;
+    color: #fe0000;
+    -webkit-transition: all 0.4s ease-in-out;
+    -moz-transition: all 0.4s ease-in-out;
+    -o-transition: all 0.4s ease-in-out;
+    transition: all 0.4s ease-in-out;
+  }
   .site-menu ul li .sub-menu {
     display: block !important;
-  }
-  .modal.mode-quick-view-product .modal-dialog {
-    max-width: 850px;
   }
 }
 
@@ -2245,6 +2252,23 @@ form.wpcf7-form .wpcf7-submit {
     margin: 0;
     padding: 0;
     display: block;
+  }
+  .site-header .header-right {
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-align-items: center;
+    align-items: center;
+    -webkit-justify-content: flex-end;
+    justify-content: flex-end;
+  }
+  .site-header .header-right-top .header-search .search-form {
+    display: none;
+  }
+  .site-header .header-right-bottom {
+    display: none;
   }
   .site-menu {
     position: absolute;
