--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -159,16 +159,21 @@
     }
     .header-right-bottom {
       display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      bottom: 0;
+      width: 260px;
+      background-color: #1d2127;
+      z-index: 9999;
+      margin-top: 0;
+
+      .main-navigation {
+        background-color: transparent;
+      }
     }
   }
   .site-menu {
-    position: absolute;
-    top: 100%;
-    left: 0;
-    right: 0;
-    background-color: #eeeeee;
-    z-index: 99;
-
     .collapse {
       display: none !important;
 
@@ -188,6 +193,8 @@
         a {
           display: inline-block;
           padding: 15px 0;
+          color: #ffffff;
+          font-weight: 400;
         }
         .sub-menu {
           display: none;
@@ -226,6 +233,7 @@
   }
   .icon_menu_item_mobile {
     display: block;
+    color: #ffffff;
   }
 
 }
