--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -158,7 +158,6 @@
       }
     }
     .header-right-bottom {
-      display: none;
       position: fixed;
       top: 0;
       left: 0;
@@ -167,9 +166,32 @@
       background-color: #1d2127;
       z-index: 9999;
       margin-top: 0;
+      opacity: 0;
+      visibility: hidden;
+      @include transform(translateX(-100%));
+      @include transition(all 0.4s ease-in-out);
 
+      &.active {
+        opacity: 1;
+        visibility: visible;
+        @include transform(translateX(0));
+      }
       .main-navigation {
+        margin-top: 15px;
         background-color: transparent;
+      }
+
+      .nav-panel-close {
+        position: absolute;
+        color: #ffffff;
+        top: 85px;
+        right: -40px;
+        width: 40px;
+        height: 40px;
+        line-height: 40px;
+        text-align: center;
+        background-color: #1d2127;
+        border-radius: 0 6px 6px 0;
       }
     }
   }
@@ -191,10 +213,15 @@
           border-bottom: 0;
         }
         a {
-          display: inline-block;
-          padding: 15px 0;
+          display: block;
+          padding: 5px 25px 5px 6px;
           color: #ffffff;
           font-weight: 400;
+
+          &:hover,
+          &:focus {
+            background-color: #282d36;
+          }
         }
         .sub-menu {
           display: none;
@@ -203,6 +230,8 @@
           visibility: visible;
           border-top: 0;
           background-color: transparent;
+          border-radius: 0;
+          @include box-shadow(none);
           @include transition-duration(0s);
 
           li {
@@ -211,16 +240,6 @@
 
             a {
               padding: 8px 0;
-
-              &:before {
-                content: "\f111";
-                display: inline-block;
-                font-family: 'Font Awesome 5 Free';
-                font-style: normal;
-                font-weight: 400;
-                font-size: 10px;
-                margin-right: 10px;
-              }
             }
             .icon_menu_item_mobile {
               top: 5px;
@@ -228,12 +247,31 @@
             }
           }
         }
+        &:hover {
+          background-color: transparent;
+        }
       }
     }
   }
   .icon_menu_item_mobile {
     display: block;
     color: #ffffff;
+  }
+  .panel-overlay {
+    opacity: 0;
+    visibility: hidden;
+    @include transition(all 0.4s ease-in-out);
+  }
+  .panel-overlay.active {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    opacity: 1;
+    visibility: visible;
+    background-color: rgba(0,0,0,0.35);
+    z-index: 9998;
   }
 
 }
