--- a/scss/style.scss
+++ b/scss/style.scss
@@ -32,6 +32,7 @@ Text Domain: printer
   ## Posts Carousel
   ## Partners Carousel
   ## Popup Video
+  ## Chart
 # Contact Form 7
 # Footer
 # Responsive
